example/fail/fail_type8.dl

int $[main]{
    struct example{
        int a ;
        string b;
    } obj;
    obj->a <- "a";//incompatible field
    
}

